@@ -8,8 +8,6 @@
                     { "name": "apple-xserve-7", "platform": "mac-snowleopard" },
                     { "name": "apple-xserve-8", "platform": "mac-snowleopard" },	
                     { "name": "apple-xserve-9", "platform": "mac-snowleopard" },	
-                    { "name": "apple-macpro-1", "platform": "mac-snowleopard" },
-                    { "name": "apple-macpro-2", "platform": "mac-snowleopard" },
                     { "name": "apple-macpro-7", "platform": "mac-snowleopard" },
 
                     { "name": "apple-macpro-3", "platform": "mac-lion" },
@@ -31,10 +29,6 @@
                     { "name": "apple-windows-6", "platform": "win"},
                     { "name": "apple-windows-7", "platform": "win"},
                     { "name": "apple-windows-8", "platform": "win"},
-                    { "name": "apple-windows-9", "platform": "win"},
-                    { "name": "apple-windows-10", "platform": "win"},
-                    { "name": "apple-windows-11", "platform": "win"},
-                    { "name": "apple-windows-12", "platform": "win"},
                     { "name": "apple-windows-13", "platform": "win"},
                     { "name": "apple-windows-14", "platform": "win"},
                     { "name": "apple-windows-15", "platform": "win"},
@@ -147,7 +141,7 @@
                     {
                       "name": "Windows 7 Release (Tests)", "type": "Test", "builddir": "win-release-tests",
                       "platform": "win", "configuration": "release", "architectures": ["i386"],
-                      "slavenames": ["apple-windows-5", "apple-windows-6", "apple-windows-11", "apple-windows-12", "test-slave"]
+                      "slavenames": ["apple-windows-5", "apple-windows-6", "test-slave"]
                     },
                     {
                       "name": "Windows Debug (Build)", "type": "Build", "builddir": "win-debug",
@@ -162,7 +156,7 @@
                     },
                     { "name": "Windows 7 Release (WebKit2 Tests)", "type": "TestWebKit2", "builddir": "win-release-tests-wk2",
                       "platform": "win", "configuration": "release", "architectures": ["i386"],
-                      "slavenames": ["apple-windows-7", "apple-windows-8", "apple-windows-9", "apple-windows-10", "test-slave"]
+                      "slavenames": ["apple-windows-7", "apple-windows-8", "test-slave"]
                     },
                     {
                       "name": "GTK Linux 32-bit Release", "type": "BuildAndTest", "builddir": "gtk-linux-32-release",
