@@ -1,3 +1,12 @@
+2012-02-29  Lucas Forschler  <lforschler@apple.com>
+
+        Removed unused Apple buildslaves from the master configuration
+        https://bugs.webkit.org/show_bug.cgi?id=79925
+
+        Reviewed by Stephanie Lewis.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2012-02-29  Dirk Pranke  <dpranke@chromium.org>
 
         nrwt: implement simple 'virtual test suite' support
